# p3Lib

./: flake.nix  hellolib.nix
hellolib/: CMakeLists.txt
hellolib/cmake/: hello_world_libraryConfig.cmake.in
hellolib/include/: hello_world.hpp
hellolib/src/: hello_world.cpp
